baml_language/crates/baml_tests/snapshots/diagnostic_errors/invalid_numeric_literals/baml_tests__diagnostic_errors__invalid_numeric_literals__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 48371
---
=== PPIR ===
type user.BadHexFlag = 0 | 0
type user.BadHexFlag$stream = 0 | 0
function user.bad_literals() -> int  [expr] {
  { let no_digits_hex = 0; let no_digits_octal = 0; let no_digits_binary = 0; let no_digits_underscores = 0; let bad_binary = 0; let bad_binary_underscores = 0; let bad_octal = 0; let bad_octal_underscores = 0; let upper_hex = 0; let upper_binary = 0; let upper_octal = 0; let too_large_decimal = 0; let too_large_decimal_wide = 0; let too_large_hex = 0; let too_large_binary = 0; let too_large_octal = 0; let beyond_int_range = 4611686018427387904; let bigint_no_digits = 0n; let bigint_bad_digit = 0n } 0
}
type user.Mask = 15 | 0
type user.Mask$stream = 15 | 0
type user.Permissions = 420 | 493
type user.Permissions$stream = 420 | 493
type user.ReadFlag = 1
type user.ReadFlag$stream = 1
function user.good_literals() -> int  [expr] {
  { let hex = 255; let hex_lower = 51966; let octal = 493; let binary = 10; let plain_zero_prefixed = 0; let underscores = 1000000; let trailing_underscore = 1; let hex_underscores = 65535; let underscore_after_prefix = 15; let int_max = 4611686018427387903; let negative = Neg 255; let big_hex = 1208925819614629174706175n; let big_underscores = 1000n; let float_mantissa = 1000.5; let float_exponent = 1e10 } hex Add octal Add binary
}
