baml_language/crates/baml_tests/snapshots/diagnostic_errors/invalid_numeric_literals/baml_tests__diagnostic_errors__invalid_numeric_literals__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.bad_literals() -> int throws never {
  { : 0
    let no_digits_hex = 0 : 0 -> int
    let no_digits_octal = 0 : 0 -> int
    let no_digits_binary = 0 : 0 -> int
    let no_digits_underscores = 0 : 0 -> int
    let bad_binary = 0 : 0 -> int
    let bad_binary_underscores = 0 : 0 -> int
    let bad_octal = 0 : 0 -> int
    let bad_octal_underscores = 0 : 0 -> int
    let upper_hex = 0 : 0 -> int
    let upper_binary = 0 : 0 -> int
    let upper_octal = 0 : 0 -> int
    let too_large_decimal = 0 : 0 -> int
    let too_large_decimal_wide = 0 : 0 -> int
    let too_large_hex = 0 : 0 -> int
    let too_large_binary = 0 : 0 -> int
    let too_large_octal = 0 : 0 -> int
    let beyond_int_range = 4611686018427387904 : 0 -> int
    let bigint_no_digits = 0n : 0n -> bigint
    let bigint_bad_digit = 0n : 0n -> bigint
    0 : 0
  }
  !! 1222..1243: integer literal `4611686018427387904` is out of range for `int` (which holds -4611686018427387904 to 4611686018427387903); append `n` to write it as a `bigint`
}
type user.BadHexFlag = 0 | 0
type user.BadHexFlag$stream = 0 | 0
function user.good_literals() -> int throws never {
  { : int
    let hex = 255 : 255 -> int
    let hex_lower = 51966 : 51966 -> int
    let octal = 493 : 493 -> int
    let binary = 10 : 10 -> int
    let plain_zero_prefixed = 0 : 0 -> int
    let underscores = 1000000 : 1000000 -> int
    let trailing_underscore = 1 : 1 -> int
    let hex_underscores = 65535 : 65535 -> int
    let underscore_after_prefix = 15 : 15 -> int
    let int_max = 4611686018427387903 : 4611686018427387903 -> int
    let negative = Neg 255 : -255 -> int
    let big_hex = 1208925819614629174706175n : 1208925819614629174706175n -> bigint
    let big_underscores = 1000n : 1000n -> bigint
    let float_mantissa = 1000.5 : 1000.5 -> float
    let float_exponent = 1e10 : 1e10 -> float
    hex + octal + binary : int
  }
}
type user.ReadFlag = 1
type user.Permissions = 420 | 493
type user.Mask = 15 | 0
type user.ReadFlag$stream = 1
type user.Permissions$stream = 420 | 493
type user.Mask$stream = 15 | 0
